--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -16,6 +16,7 @@ brick_root: "/mnt/brick"
 brick_data: "/mnt/brick/data"
 db_path: "{{ config_root }}/mariadb"
 traefik_dynamic_config_dir: "{{ config_root }}/traefik_config/dynamic"
+irc_name: "BookReader_{{ ansible_date_time.epoch }}"
 
 # 172.18.0.1 - 172.18.0.62
 media_subnet: 172.18.0.0/26
