--- a/roles/services/openbooks/tasks/main.yml
+++ b/roles/services/openbooks/tasks/main.yml
@@ -10,10 +10,9 @@
     pull: yes
     state: 'started'
     recreate: yes
-    command: "./openbooks server --dir /books --port 80 --name {{ irc_name }} -s irc.irchighway.net:6667"
+    command: "./openbooks server --dir /books --port 80 --name {{ irc_name }} -s irc.irchighway.net:9999"
     dns_servers:
-      - "8.8.8.8"
-      - "1.1.1.1"
+      - "{{ server_ip }}"  # Pi-hole server
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
