--- a/roles/services/gramps/tasks/main.yml
+++ b/roles/services/gramps/tasks/main.yml
@@ -34,7 +34,7 @@
     recreate: yes
     command: 'celery -A gramps_webapi.celery worker --loglevel=INFO --concurrency=2'
     env:
-      GRAMPSWEB_TREE: "Gramps Web"  # will create a new tree if not exists
+      GRAMPSWEB_TREE: "Gramps Web"  # use the tree name, not UUID
       GRAMPSWEB_CELERY_CONFIG__broker_url: "redis://grampsweb_redis:6379/0"
       GRAMPSWEB_CELERY_CONFIG__result_backend: "redis://grampsweb_redis:6379/0"
       GRAMPSWEB_RATELIMIT_STORAGE_URI: redis://grampsweb_redis:6379/1
@@ -90,7 +90,7 @@
     state: 'started'
     recreate: yes
     env:
-      GRAMPSWEB_TREE: "Gramps Web"  # will create a new tree if not exists
+      GRAMPSWEB_TREE: "Gramps Web"  # use the tree name, not UUID
       GRAMPSWEB_CELERY_CONFIG__broker_url: "redis://grampsweb_redis:6379/0"
       GRAMPSWEB_CELERY_CONFIG__result_backend: "redis://grampsweb_redis:6379/0"
       GRAMPSWEB_RATELIMIT_STORAGE_URI: redis://grampsweb_redis:6379/1
